Tracing kann auf Knopf-Druck ein- und ausgeschaltet werden.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -111,6 +111,7 @@
                       </div>
                     </div>
                   </div>
+                  <button id="trace" class="btn btn-block" data-toggle="button" type="button">Trace</button>
                 </div>
               </div>
             </div>
