Physikalische Standard-Einheiten in der Anzeige gewechselt: m zu km, m/s zu km/h und s zu min.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,7 +45,7 @@
                 <td>
                   <div class="input-append">
                     <span id="pathLength" class="input-small uneditable-input"></span>
-                    <span class="add-on">m</span>
+                    <span class="add-on">km</span>
                   </div>
                 </td>
               </tr>
@@ -54,7 +54,7 @@
                 <td>
                   <div class="input-append">
                     <span id="pathTripTime" class="input-small uneditable-input"></span>
-                    <span class="add-on">s</span>
+                    <span class="add-on">min</span>
                   </div>
                 </td>
               </tr>
@@ -129,7 +129,7 @@
                 <td>
                   <div class="input-append">
                     <span id="wayLength" class="input-small uneditable-input"></span>
-                    <span class="add-on">m</span>
+                    <span class="add-on">km</span>
                   </div>
                 </td>
               </tr>
@@ -139,7 +139,7 @@
                   <div class="input-append">
                     <span id="wayMaxSpeed" class="input-small uneditable-input"></span>
                     <input id="wayMaxSpeedInput" class="input-small" style="display: none" type="text">
-                    <span class="add-on">m/s</span>
+                    <span class="add-on">km/h</span>
                   </div>
                   <div class="btn-group">
                     <button id="wayEditMaxSpeed" class="btn" type="button"><i class="icon-edit"></i></button>
@@ -153,7 +153,7 @@
                 <td>
                   <div class="input-append">
                     <span id="wayTripTime" class="input-small uneditable-input"></span>
-                    <span class="add-on">s</span>
+                    <span class="add-on">min</span>
                   </div>
                 </td>
               </tr>
