Folien "Motivation" und "Fragen" grafisch aufbereitet.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -55,10 +55,11 @@ URL: https://code.google.com/p/io-2012-slides
     </article>
   </slide>
 
-  <slide class="nobackground segue">
-    <hgroup>
+  <slide class="fill nobackground" style="background-image: url(images/motivation.jpg)">
+    <aside class="dark left top">
       <h2>Motivation</h2>
-    </hgroup>
+    </aside>
+    <footer class="source">http://www.army.mil/-images/2006/10/23/747/army.mil-2006-10-23-142758.jpg</footer>
   </slide>
 
   <slide>
@@ -298,10 +299,9 @@ URL: https://code.google.com/p/io-2012-slides
     </hgroup>
   </slide>
 
-  <slide class="nobackground segue">
-    <hgroup>
-      <h2>Fragen?</h2>
-    </hgroup>
+  <slide class="fill image nobackground"
+      style="background-image: url(images/killing-question.png); background-position: 50%">
+    <footer class="source">http://www.fseta.com/Uploads/Pages/Images/killing%20question.jpg</footer>
   </slide>
 
   <slide class="backdrop"></slide>
