Grundlagen-Folie grafisch aufbereitet.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -103,12 +103,11 @@ URL: https://code.google.com/p/io-2012-slides
     </article>
   </slide>
 
-  <slide class="nobackground segue">
-    <hgroup>
+  <slide class="fill nobackground" style="background-image: url(images/math-mistakes-May-5-2010-003.jpg)">
+    <aside class="dark right">
       <h2>Grundlagen</h2>
-    </hgroup>
-    <article>
-    </article>
+    </aside>
+    <footer class="source">http://blogs.psychcentral.com/always-learning/files/2010/05/math-mistakes-May-5-2010-003.jpg</footer>
   </slide>
 
   <slide>
