Ziel-Folie grafisch aufbereitet.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -90,17 +90,18 @@ URL: https://code.google.com/p/io-2012-slides
     </article>
   </slide>
 
-  <slide>
-    <hgroup>
+  <slide class="fill nobackground" style="background-image: url(images/finish.jpg)">
+    <aside class="dark left">
       <h2>Ziel</h2>
-    </hgroup>
-    <article>
+    </aside>
+    <!--
       <ul>
         <li>Einsatz auf realen Strassen-Karten</li>
         <li>Software-Prototyp</li>
         <li>Parameter-Experimente</li>
       </ul>
-    </article>
+    -->
+    <footer class="source">http://www.flickr.com/photos/ilike/3707503212</footer>
   </slide>
 
   <slide class="fill nobackground" style="background-image: url(images/math-mistakes-May-5-2010-003.jpg)">
