Probleme-Folien grafisch und inhaltlich aufbereitet.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -254,20 +254,31 @@ URL: https://code.google.com/p/io-2012-slides
     </hgroup>
   </slide>
 
-  <slide class="nobackground segue">
-    <hgroup>
+  <slide class="fill nobackground" style="background-image: url(images/arlowames.jpg)">
+    <aside class="dark left top">
       <h2>Probleme</h2>
-    </hgroup>
+    </aside>
+    <footer class="source">https://share.sandia.gov/news/resources/releases/2007/images/arlowames.jpg</footer>
   </slide>
 
   <slide>
-    <hgroup>
-      <h2>Probleme</h2>
-    </hgroup>
     <article>
-      <ul>
-        <li>Implementierung der Ameisen</li>
-        <li>Anzahl erzeugter Ameisen</li>
+      <ul class="build">
+        <li>
+          <span>Anzahl erzeugter Ameisen</span>
+          <ul class="build">
+            <li>Reduktion der Knoten</li>
+            <li>Anzahl erzeugter Ameisen proportional zu Ziel-Entfernung</li>
+          </ul>
+        </li>
+        <li>
+          <span>Implementierung der Ameisen</span>
+          <ul class="build">
+            <li><s>Ameisen aktiv, ständige Erzeugung</s></li>
+            <li><s>Ameisen aktiv, Ameisen-Pool</s></li>
+            <li>Ameisen passiv, ständige Erzeugung</li>
+          </ul>
+        </li>
       </ul>
     </article>
   </slide>
