Hintergrund-Bild-Position angepasst.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -29,7 +29,9 @@ URL: https://code.google.com/p/io-2012-slides
 <slides class="layout-widescreen">
 
   <slide class="title-slide segue nobackground"
-      style="background-image: url(images/ant-trail1.jpg); background-repeat: no-repeat;">
+      style="background-image: url(images/ant-trail1.jpg);
+        background-position: 1em 1em;
+        background-repeat: no-repeat;">
     <aside class="gdbar"><img src="images/FH-Wedel-Logo-128.png"></aside>
     <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
     <hgroup>
