Ausblick-Folie grafisch aufbereitet.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -293,10 +293,10 @@ URL: https://code.google.com/p/io-2012-slides
     </hgroup>
   </slide>
 
-  <slide class="nobackground segue">
-    <hgroup>
+  <slide class="fill nobackground" style="background-image: url(images/Das-Fernrohr.jpg); background-position: 50%">
+    <aside class="bottom dark left">
       <h2>Ausblick</h2>
-    </hgroup>
+    </aside>
   </slide>
 
   <slide>
@@ -308,7 +308,7 @@ URL: https://code.google.com/p/io-2012-slides
     </article>
   </slide>
 
-  <slide class="nobackground segue">
+  <slide class="nobackground segue thank-you-slide">
     <hgroup>
       <h2>Vielen Dank!</h2>
     </hgroup>
