--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -74,11 +74,11 @@
               <table class="table table-bordered table-condensed table-striped">
                 <tr>
                   <td>Launched ants</td>
-                  <td id="launched-ants"></td>
+                  <td id="path-additional-data-launched-ants"></td>
                 </tr>
                 <tr>
                   <td>Arrived ants</td>
-                  <td id="arrived-ants"></td>
+                  <td id="path-additional-data-arrived-ants"></td>
                 </tr>
               </table>
             </div>
@@ -199,48 +199,89 @@
           <h1>Ants</h1>
           <table class="table table-bordered table-condensed table-hover table-striped">
             <tr>
-              <th></th>
-              <th>per second</th>
-              <th>total</th>
-            </tr>
-            <tr>
               <td>Launched</td>
-              <td id="launched-ants-per-second"></td>
-              <td id="total-launched-ants"></td>
+              <td id="launched-ants"></td>
             </tr>
             <tr>
               <td>Arrived</td>
-              <td id="arrived-ants-per-second"></td>
-              <td id="total-arrived-ants"></td>
+              <td id="arrived-ants"></td>
             </tr>
             <tr>
               <td>Dead end street reached</td>
-              <td id="dead-end-street-reached-ants-per-second"></td>
-              <td id="total-dead-end-street-reached-ants"></td>
+              <td id="dead-end-street-reached-ants"></td>
             </tr>
             <tr>
               <td>Max age exceeded</td>
-              <td id="max-age-exceeded-ants-per-second"></td>
-              <td id="total-max-age-exceeded-ants"></td>
+              <td id="max-age-exceeded-ants"></td>
             </tr>
           </table>
-          Mean age: <span id="ant-age"></span> s
-          <br>
-          Idle time: <span id="ants-idle-time"></span> ms
-          <br>
-          Select next node duration: <span id="select-next-node-duration"></span> ms
+          <table class="table table-bordered table-condensed table-hover table-striped">
+            <tr>
+              <td>Mean age</td>
+              <td>
+                <div class="input-append">
+                  <span id="ant-age" class="input-small uneditable-input"></span>
+                  <span class="add-on">s</span>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>Idle time</td>
+              <td>
+                <div class="input-append">
+                  <span id="ants-idle-time" class="input-small uneditable-input"></span>
+                  <span class="add-on">ms</span>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>Select next node duration</td>
+              <td>
+                <div class="input-append">
+                  <span id="select-next-node-duration" class="input-small uneditable-input"></span>
+                  <span class="add-on">ms</span>
+                </div>
+              </td>
+            </tr>
+          </table>
         </div>
 
         <!-- Knoten -->
         <div class="span6 well">
           <h1>Nodes</h1>
-          Launch ants duration: <span id="launch-ants-duration"></span> ms
-          <br>
-          Processed ants per second: <span id="processed-ants"></span>
-          <br>
-          Process ant duration: <span id="process-ant-duration"></span> ms
-          <br>
-          Update data structures duration: <span id="update-data-structures-duration"></span> ms
+          <table class="table table-bordered table-condensed table-hover table-striped">
+            <tr>
+              <td>Launch ants duration</td>
+              <td>
+                <div class="input-append">
+                  <span id="launch-ants-duration" class="input-small uneditable-input"></span>
+                  <span class="add-on">ms</span>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>Processed ants per second</td>
+              <td id="processed-ants"></td>
+            </tr>
+            <tr>
+              <td>Process ant duration</td>
+              <td>
+                <div class="input-append">
+                  <span id="process-ant-duration" class="input-small uneditable-input"></span>
+                  <span class="add-on">ms</span>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>Update data structures duration</td>
+              <td>
+                <div class="input-append">
+                  <span id="update-data-structures-duration" class="input-small uneditable-input"></span>
+                  <span class="add-on">ms</span>
+                </div>
+              </td>
+            </tr>
+          </table>
         </div>
       </div>
 
