Statistics in Monitoring umbenannt.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@
       <!-- Tabs -->
       <ul class="nav">
         <li class="active"><a href="#map-tab" data-toggle="tab">Map</a></li>
-        <li><a href="#statistics-tab" data-toggle="tab">Statistics</a></li>
+        <li><a href="#monitoring-tab" data-toggle="tab">Monitoring</a></li>
       </ul>
     </div>
   </div>
@@ -190,8 +190,8 @@
       </div>
     </div>
 
-    <!-- Statistiken-Tab -->
-    <div class="tab-pane" id="statistics-tab">
+    <!-- Monitoring-Tab -->
+    <div class="tab-pane" id="monitoring-tab">
       <div class="row">
 
         <!-- Ameisen -->
@@ -293,7 +293,7 @@
 
 <!-- Comet-Aktoren -->
 <div data-lift="AddAntScoutCometActor"></div>
-<div data-lift="AddStatisticsCometActor"></div>
+<div data-lift="AddMonitoringCometActor"></div>
 <div data-lift="AddUserInterfaceCometActor"></div>
 
 <!-- Skripte einbinden -->
